# Pico-SmartPlanter

./: CMakeLists.txt  README.md
include/: MCP3008.h
src/: CMakeLists.txt  MCP3008.cpp  main.cpp
